<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backblur"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logooopng"
        android:contentDescription="@string/loginapplogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"

>


    </ImageView>

    <EditText
        android:id="@+id/login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/id"
        android:layout_below="@id/login_logo"
        android:textAlignment="center"
        android:padding="20dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@id/login_id"
        android:textAlignment="center"
        android:padding="20dp"
        android:importantForAutofill="no" />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/login_pass"
        android:layout_marginTop="5dp"
        >

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Material.Drawable.CheckBox"
            android:text="@string/remember_me"

            >

        </CheckBox>






    </LinearLayout>
    <Button
        android:id="@+id/login_button_login_page"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="470dp"
        android:layout_marginStart="7dp"
        android:backgroundTint="#C3073F"
        android:text="@string/log_in"
        android:textAllCaps="false" />






</RelativeLayout>