<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backblur"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logooopng"
        android:contentDescription="@string/loginapplogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"

        >


    </ImageView>

    <EditText
        android:id="@+id/register_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username_id"
        android:layout_below="@id/register_logo"
        android:textAlignment="center"
        android:padding="20dp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Create Password"
        android:layout_below="@id/register_ID"
        android:textAlignment="center"
        android:padding="20dp"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/register_button_register_page"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="350dp"
        android:layout_marginStart="7dp"
        android:backgroundTint="#C3073F"
        android:text="@string/create_account"
        android:textAllCaps="false" />

</RelativeLayout>